--- a/Views/Shared/_CssSelector.cshtml
+++ b/Views/Shared/_CssSelector.cshtml
@@ -9,4 +9,12 @@
     };
 }
 
+<link rel="stylesheet" href="~/css/modules/variables.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/base.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/layout.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/sidebar.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/navbar.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/components.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/utilities.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/responsive.css" asp-append-version="true" />
 <link rel="stylesheet" href="@cssFile" asp-append-version="true" /> 
