Update 0.7 (Fix Details.cshtml and Backup For Windtail).

--- a/Views/Shared/_CssSelector.cshtml
+++ b/Views/Shared/_CssSelector.cshtml
@@ -9,12 +9,21 @@
     };
 }
 
+<!-- CSS cơ bản và các module -->
 <link rel="stylesheet" href="~/css/modules/variables.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/modules/base.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/modules/layout.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/modules/sidebar.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/modules/navbar.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/modules/components.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/modules/manga.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/modules/utilities.css" asp-append-version="true" />
 <link rel="stylesheet" href="~/css/modules/responsive.css" asp-append-version="true" />
-<link rel="stylesheet" href="@cssFile" asp-append-version="true" /> 
+
+<!-- CSS trang cụ thể -->
+<link rel="stylesheet" href="@cssFile" asp-append-version="true" />
+
+<!-- Tải thêm các CSS khác cho tất cả các trang -->
+<link rel="stylesheet" href="~/css/manga-details.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/chapter.css" asp-append-version="true" />
+<link rel="stylesheet" href="~/css/home.css" asp-append-version="true" /> 
